INCLUDES = 
METASOURCES = AUTO
bin_PROGRAMS = bornex
bornex_SOURCES = bornex.f
bornex_LDADD = $(top_builddir)/KKsem/libKKsem.a $(top_builddir)/KK2f/libKK2f.a\
	$(top_builddir)/glibk/libGlibk.a $(top_builddir)/jetset/libJetset.a\
	$(top_builddir)/bornv/libBornvDizet.a $(top_builddir)/tauola/libTauola.a\
	$(top_builddir)/photos/libPhotos.a $(top_builddir)/dizet/libDizet.a
